--- a/ServerGeoUserGradle/build.gradle
+++ b/ServerGeoUserGradle/build.gradle
@@ -46,7 +46,7 @@ findbugs {
     ignoreFailures = true
     reportsDir = file("$project.buildDir/findbugsReports")
     effort = "default"
-    reportLevel = "medium"
+    reportLevel = "high"
 }
 tasks.withType(FindBugs) {
     reports {
