--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ notifications:
   email: false
   
 after_script:
--cat "$(ls $project.buildDir/findbugsReports -t | head -n1)"
+- cat $project.buildDir/findbugsReports/main.html
