Correzione file .travis.yml, comando "cat"

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ notifications:
   email: false
   
 after_script:
-- cat $project.buildDir/findbugsReports/main.html
+- cat /home/travis/build/Pas21/geo-user-project/ServerGeoUserGradle/build/findbugsReports/main.html
