Modifica build.gradle per rilevare tutti i potenziali "bugs" scovati da findbugs

--- a/ServerGeoUserGradle/build.gradle
+++ b/ServerGeoUserGradle/build.gradle
@@ -45,8 +45,8 @@ dependencies {
 findbugs {
     ignoreFailures = true
     reportsDir = file("$project.buildDir/findbugsReports")
-    effort = "default"
-    reportLevel = "high"
+    effort = "max"
+    reportLevel = "low"
 }
 tasks.withType(FindBugs) {
     reports {
