--- a/ServerGeoUserGradle/build.gradle
+++ b/ServerGeoUserGradle/build.gradle
@@ -38,7 +38,16 @@ dependencies {
     compile 'org.apache.commons:commons-math3:3.6.1','com.google.guava:guava:21.0','org.hamcrest:hamcrest-core:1.3','junit:junit:4.12'
  	compile 'com.google.code.gson:gson:2.8+'	
  	compile 'org.restlet.jee:org.restlet:2.3.0'
- 	compile 'com.google.code.findbugs:annotations:3+'
+ 	
+ 	//Import findbugs library
+ 	compile 'com.google.code.findbugs:annotations:3+'	
+ 	
+ 	//Import hibernate library
+	compile 'org.hibernate:hibernate-core:5+'
+	
+	//Import MySQL connector java driver
+	compile 'mysql:mysql-connector-java:5+'	//compile 'mysql:mysql-connector-java:5.1.44'
+	
 }
 
 //findbugs tasks settings
@@ -47,6 +56,8 @@ findbugs {
     reportsDir = file("$project.buildDir/findbugsReports")
     effort = "max"
     reportLevel = "low"
+    includeFilter = file("$rootProject.projectDir/config/findbugs/includeFilter.xml")
+    //excludeFilter = file("$rootProject.projectDir/config/findbugs/excludeFilter.xml")
 }
 tasks.withType(FindBugs) {
     reports {
