--- a/ClientGeoUser/app/src/main/AndroidManifest.xml
+++ b/ClientGeoUser/app/src/main/AndroidManifest.xml
@@ -2,11 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vfggmail.progettoswe17.clientgeouser">
 
-
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
@@ -25,15 +29,20 @@
         <activity android:name=".application.findUserActivity" />
         <activity android:name=".application.mainPage" />
         <activity android:name=".application.settingsActivity" />
-        <activity android:name=".application.showMapActivity"></activity>
+        <activity android:name=".application.showMapActivity" />
+        <activity android:name=".application.loginActivity" />
+
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <activity
+            android:name=".loginActivity"
+            android:label="@string/title_activity_login"></activity>
     </application>
 
 </manifest>
