--- a/ClientGeoUser/app/src/main/AndroidManifest.xml
+++ b/ClientGeoUser/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".application.settingsActivity" />
         <activity android:name=".application.showMapActivity" />
         <activity android:name=".application.loginActivity" />
+        <activity android:name=".application.signInActivity"></activity>
 
 
         <meta-data
@@ -40,9 +41,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity
-            android:name=".loginActivity"
-            android:label="@string/title_activity_login"></activity>
+
     </application>
 
 </manifest>
