--- a/ServerGeoUserGradle/build.gradle
+++ b/ServerGeoUserGradle/build.gradle
@@ -12,6 +12,9 @@ apply plugin: 'java'
 //Apply findbugs inspection plugin
 apply plugin: 'findbugs'
 
+//Apply Jacoco plugin
+apply plugin: 'jacoco'
+
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use jcenter for resolving your dependencies.
@@ -35,12 +38,15 @@ dependencies {
     //testImplementation 'junit:junit:4.12'
     
     //Import all necessary external libraries 
-    compile 'org.apache.commons:commons-math3:3.6.1','com.google.guava:guava:21.0','org.hamcrest:hamcrest-core:1.3','junit:junit:4.12'
+    compile 'org.apache.commons:commons-math3:3.6.1','com.google.guava:guava:21.0','org.hamcrest:hamcrest-core:1.3'
  	compile 'com.google.code.gson:gson:2.8+'	
  	compile 'org.restlet.jee:org.restlet:2.3+'
  	
  	//Import findbugs library
- 	compile 'com.google.code.findbugs:annotations:3+'	
+ 	compile 'com.google.code.findbugs:annotations:3+'
+ 	
+ 	//import jacoco library
+ 	compile 'org.jacoco:jacoco-maven-plugin:0.7.+'	
  	
  	//Import hibernate library
 	compile 'org.hibernate:hibernate-core:5+'
@@ -48,7 +54,8 @@ dependencies {
 	
 	//Import MySQL connector java driver
 	compile 'mysql:mysql-connector-java:5+'	//compile 'mysql:mysql-connector-java:5.1.44'
-	
+	// Use JUnit test framework
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 //findbugs tasks settings
@@ -66,3 +73,53 @@ tasks.withType(FindBugs) {
         html.enabled = true
     }
 }
+
+tasks.withType(JacocoReport) {
+    reports {
+		xml{
+			enabled false
+			destination "$project.buildDir/reports/jacoco/jacoco.xml"
+		}
+		csv.enabled false
+		html{
+			enabled true
+			destination project.file("$project.buildDir/reports/jacoco/jacoco.html")
+		}
+	}
+}
+
+task createDB {
+     project.exec {
+		//commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
+    	//"--host=localhost", "--port=3306", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
+    	
+    	commandLine 'mysql', "--user=utente", "--password=password",
+    	"--host=localhost", "--port=3306", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
+    	
+	}    
+}
+
+
+task loadDB {
+	project.exec {
+		standardInput = new FileInputStream(project.file("$rootProject.projectDir/geouserdb.sql"))
+    	//commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
+    	//"--host=localhost", "--port=3306", 'geouserdb'
+    	commandLine 'mysql', "--user=utente", "--password=password", "--host=localhost", "--port=3306", 'geouserdb'
+	}   
+}
+
+loadDB.dependsOn createDB
+tasks.test.dependsOn loadDB
+
+//task printJacocoReport {
+//	project.exec {
+//    	workingDir "$rootProject.projectDir/"
+//    	commandLine 'gradlew', 'jacocoTestReport'
+//	}         
+//}
+
+//printJacocoReport.onlyIf{
+//   tasks.test.didWork
+//}
+
