--- a/ServerGeoUserGradle/build.gradle
+++ b/ServerGeoUserGradle/build.gradle
@@ -93,8 +93,7 @@ task createDB {
 		//commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
     	//"--host=localhost", "--port=3306", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
     	
-    	commandLine 'mysql', "--user=utente", "--password=password",
-    	"--host=localhost", "--port=3306", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
+    	commandLine 'mysql', "--user=root", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
     	
 	}    
 }
@@ -105,7 +104,7 @@ task loadDB {
 		standardInput = new FileInputStream(project.file("$rootProject.projectDir/geouserdb.sql"))
     	//commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
     	//"--host=localhost", "--port=3306", 'geouserdb'
-    	commandLine 'mysql', "--user=utente", "--password=password", "--host=localhost", "--port=3306", 'geouserdb'
+    	commandLine 'mysql', "--user=root", 'geouserdb'
 	}   
 }
 
