Modifica file .travis.yml per lo svuotamento della cache di gradle e per la creazione del database. #9

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ services:
 - mysql
 
 before_install:
-- mysql --user=root --host=localhost -e 'CREATE DATABASE IF NOT EXISTS geouserdb;' 
+- mysql --user=root --host=localhost -e "CREATE DATABASE IF NOT EXISTS geouserdb;" 
 - cd ServerGeoUserGradle
 - chmod +x gradlew
-- ./gradlew clean
+- ./gradlew cleanBuildCache
 
 jdk: oraclejdk8
 
