--- a/ServerGeoUserGradle/build.gradle
+++ b/ServerGeoUserGradle/build.gradle
@@ -88,15 +88,15 @@ tasks.withType(JacocoReport) {
 	}
 }
 
-//task createDB {
-//     project.exec {
+task createDB {
+     project.exec {
 		//commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
     	//"--host=localhost", "--port=3306", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
     	
-//    	commandLine 'mysql', "--user=root", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
+    	commandLine 'mysql', "--user=root", "--host=localhost", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
     	
-//	}    
-//}
+	}    
+}
 
 task loadDB {
 	project.exec {
@@ -107,7 +107,7 @@ task loadDB {
 	}   
 }
 
-//loadDB.dependsOn createDB
+loadDB.dependsOn createDB
 tasks.test.dependsOn loadDB
 
 //task printJacocoReport {
