--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ notifications:
   
 after_script:
 - cat /home/travis/build/Pas21/geo-user-project/ServerGeoUserGradle/build/findbugsReports/main.html
-- cat /home/travis/build/Pas21/geo-user-project/ServerGeoUserGradle/build/reports/tests/test/index.html
+- cat $TRAVIS_TEST_RESULT/index.html
+- ls $TRAVIS_TEST_RESULT
