Modifica file .travis.yml per la visualizzazione del report relativo ai test d'unità e aggiornamento fil ebuild.gradle #9

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,4 @@ notifications:
   
 after_script:
 - cat /home/travis/build/Pas21/geo-user-project/ServerGeoUserGradle/build/findbugsReports/main.html
-- cd /home/travis/build/Pas21/geo-user-project/ServerGeoUserGradle/build/reports/tests/test
-- ls
+- cat /home/travis/build/Pas21/geo-user-project/ServerGeoUserGradle/build/reports/JUnitReport/index.html
