--- a/ServerGeoUserGradle/build.gradle
+++ b/ServerGeoUserGradle/build.gradle
@@ -95,10 +95,10 @@ test {
 
 task createDB {
      project.exec {
-		commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
-    	"--host=localhost", "--port=3306", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
+		//commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
+    	//"--host=localhost", "--port=3306", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
     	
-    	//commandLine 'mysql', "--user=root", "--host=localhost", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
+    	commandLine 'mysql', "--user=root", "--host=localhost", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
     	
 	}    
 }
@@ -106,9 +106,9 @@ task createDB {
 task loadDB {
 	project.exec {
 		standardInput = new FileInputStream(project.file("$rootProject.projectDir/geouserdb.sql"))
-    	commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
-    	"--host=localhost", "--port=3306", 'geouserdb'
-    	//commandLine 'mysql', "--user=root", "--host=localhost", 'geouserdb'
+    	//commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
+    	//"--host=localhost", "--port=3306", 'geouserdb'
+    	commandLine 'mysql', "--user=root", "--host=localhost", 'geouserdb'
 	}   
 }
 
