--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ before_install:
 - cd ServerGeoUserGradle
 - chmod +x gradlew
 
-jdk: oraclejdk8
+jdk: 
+- oraclejdk8
+- oraclejdk7
 
 notifications:
   email: false
