--- a/ServerGeoUserGradle/build.gradle
+++ b/ServerGeoUserGradle/build.gradle
@@ -98,7 +98,7 @@ task createDB {
 		//commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
     	//"--host=localhost", "--port=3306", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
     	
-    	commandLine 'mysql', "--user=root", "--host=localhost", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
+    	commandLine 'sudo mysql', "--user=root", "--host=localhost", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
     	
 	}    
 }
@@ -108,7 +108,7 @@ task loadDB {
 		standardInput = new FileInputStream(project.file("$rootProject.projectDir/geouserdb.sql"))
     	//commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
     	//"--host=localhost", "--port=3306", 'geouserdb'
-    	commandLine 'mysql', "--user=root", "--host=localhost", 'geouserdb'
+    	commandLine 'sudo mysql', "--user=root", "--host=localhost", 'geouserdb'
 	}   
 }
 
