--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ before_install:
 - cd ServerGeoUserGradle
 - chmod +x gradlew
 - sudo service mysql restart
+- mysql --user=root --host=localhost --execute="DROP DATABASE IF EXISTS geouserdb;"
+- mysql --user=root --host=localhost --execute="CREATE DATABASE IF NOT EXISTS geouserdb;"
+- mysql --user=root --host=localhost < geouserdb.sql 
 
 jdk: 
 - oraclejdk8
