--- a/ServerGeoUserGradle/build.gradle
+++ b/ServerGeoUserGradle/build.gradle
@@ -93,27 +93,27 @@ test {
     finalizedBy jacocoTestReport
 }
 
-task createDB {
-     project.exec {
+//task createDB {
+//     project.exec {
 		//commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
     	//"--host=localhost", "--port=3306", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
     	
-    	commandLine 'sudo mysql', "--user=root", "--host=localhost", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
+//    	commandLine 'mysql', "--user=root", "--host=localhost", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
     	
-	}    
-}
+//	}    
+//}
 
-task loadDB {
-	project.exec {
-		standardInput = new FileInputStream(project.file("$rootProject.projectDir/geouserdb.sql"))
+//task loadDB {
+//	project.exec {
+//		standardInput = new FileInputStream(project.file("$rootProject.projectDir/geouserdb.sql"))
     	//commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
     	//"--host=localhost", "--port=3306", 'geouserdb'
-    	commandLine 'sudo mysql', "--user=root", "--host=localhost", 'geouserdb'
-	}   
-}
+//    	commandLine 'mysql', "--user=root", "--host=localhost", 'geouserdb'
+//	}   
+//}
 
-loadDB.dependsOn createDB
-tasks.test.dependsOn loadDB
+//loadDB.dependsOn createDB
+//tasks.test.dependsOn loadDB
 
 //task printJacocoReport {
 //	project.exec {
