--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 - sudo service mysql restart
 - mysql --user=root --host=localhost --execute="DROP DATABASE IF EXISTS geouserdb;"
 - mysql --user=root --host=localhost --execute="CREATE DATABASE IF NOT EXISTS geouserdb;"
-- mysql --user=root --host=localhost < geouserdb.sql 
+- mysql --user=root --host=localhost geouserdb < geouserdb.sql 
 
 jdk: 
 - oraclejdk8
