Stampa configurazione Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ notifications:
 after_script:
 - cat /home/travis/build/Pas21/geo-user-project/ServerGeoUserGradle/build/findbugsReports/main.html
 - cat /home/travis/build/Pas21/geo-user-project/ServerGeoUserGradle/build/reports/JUnitReport/index.html
+- cat ~travis/.my.cnf
 
 sudo: required
 dist: trusty
