--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,24 @@ language: java
 services:
 - mysql
 
+sudo: true
+
 before_install:
+- sudo apt-get update -y && sudo apt-get upgrade -y
+- echo mysql-apt-config mysql-apt-config/select-server select mysql-5.7 | sudo debconf-set-selections
+- wget https://dev.mysql.com/get/mysql-apt-config_0.7.3-1_all.deb
+- sudo dpkg --install mysql-apt-config_0.7.3-1_all.deb
+- sudo apt-get update -q
+- sudo apt-get install -q -y --allow-unauthenticated -o Dpkg::Options::=--force-confnew mysql-server
+- sudo mysql_upgrade
+- sudo apt-get update -y && sudo apt-get upgrade -y
+- sudo service mysql restart
 - cd ServerGeoUserGradle
 - chmod +x gradlew
-- sudo service mysql restart
 - mysql --user=root --host=localhost --execute="DROP DATABASE IF EXISTS geouserdb;"
 - mysql --user=root --host=localhost --execute="CREATE DATABASE IF NOT EXISTS geouserdb;"
 - mysql --user=root --host=localhost geouserdb < geouserdb.sql 
+
 
 jdk: 
 - oraclejdk8
