--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,13 @@ services:
 sudo: true
 
 before_install:
-- sudo apt-get update -y && sudo apt-get upgrade -y
 - echo mysql-apt-config mysql-apt-config/select-server select mysql-5.7 | sudo debconf-set-selections
 - wget https://dev.mysql.com/get/mysql-apt-config_0.7.3-1_all.deb
 - sudo dpkg --install mysql-apt-config_0.7.3-1_all.deb
 - sudo apt-get update -q
 - sudo apt-get install -q -y --allow-unauthenticated -o Dpkg::Options::=--force-confnew mysql-server
 - sudo mysql_upgrade
-- sudo apt-get update -y && sudo apt-get upgrade -y
+- sudo apt-get update -y
 - sudo service mysql restart
 - cd ServerGeoUserGradle
 - chmod +x gradlew
