--- a/ServerGeoUserGradle/build.gradle
+++ b/ServerGeoUserGradle/build.gradle
@@ -10,10 +10,10 @@
 apply plugin: 'java'
 
 //Apply findbugs inspection plugin
-apply plugin: 'findbugs'
+//apply plugin: 'findbugs'
 
 //Apply Jacoco plugin
-apply plugin: 'jacoco'
+//apply plugin: 'jacoco'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -58,6 +58,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
+/*
 //findbugs tasks settings
 findbugs {
     ignoreFailures = true
@@ -126,3 +127,4 @@ test {
 //   tasks.test.didWork
 //}
 
+*/
