Analisi statica di findbugs solo sulle classi java e non sui test JUnit, aggiunta del modificatore synchronized a Singleton GestoreDatiPersistenti #6

--- a/ServerGeoUserGradle/build.gradle
+++ b/ServerGeoUserGradle/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 
 //findbugs tasks settings
 findbugs {
+    sourceSets = [sourceSets.main]
     ignoreFailures = true
     reportsDir = file("$project.buildDir/findbugsReports")
     effort = "max"
