--- a/ServerGeoUserGradle/build.gradle
+++ b/ServerGeoUserGradle/build.gradle
@@ -58,7 +58,14 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-
+//Javadoc tasks settings
+task generateJavadoc(type: Javadoc) {
+   source = sourceSets.main.allJava
+   destinationDir = reporting.file("$rootProject.projectDir/javadocs")
+ }
+tasks.test.dependsOn generateJavadoc
+ 
+ 
 //findbugs tasks settings
 findbugs {
     sourceSets = [sourceSets.main]
@@ -97,10 +104,10 @@ test {
 
 task createDB {
      project.exec {
-		//commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
-    	//"--host=localhost", "--port=3306", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
+		commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
+    	"--host=localhost", "--port=3306", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
     	
-    	commandLine 'mysql', "--user=root", "--host=localhost", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
+    	//commandLine 'mysql', "--user=root", "--host=localhost", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
     	
 	}    
 }
@@ -108,9 +115,10 @@ task createDB {
 task loadDB {
 	project.exec {
 		standardInput = new FileInputStream(project.file("$rootProject.projectDir/geouserdb.sql"))
-    	//commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
-    	//"--host=localhost", "--port=3306", 'geouserdb'
-    	commandLine 'mysql', "--user=root", "--host=localhost", 'geouserdb'
+    	commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
+    	"--host=localhost", "--port=3306", 'geouserdb'
+    	
+    	//commandLine 'mysql', "--user=root", "--host=localhost", 'geouserdb'
 	}   
 }
 
