--- a/ServerGeoUserGradle/build.gradle
+++ b/ServerGeoUserGradle/build.gradle
@@ -39,33 +39,33 @@ dependencies {
     
     //Import all necessary external libraries 
     compile 'org.apache.commons:commons-math3:3.6.1','com.google.guava:guava:21.0','org.hamcrest:hamcrest-core:1.3'
- 	compile 'com.google.code.gson:gson:2.8.2'	
- 	compile 'org.restlet.jee:org.restlet:2.3.12'
+ 	compile 'com.google.code.gson:gson:2.8+'	
+ 	compile 'org.restlet.jee:org.restlet:2.3+'
  	
  	//Import findbugs library
- 	compile 'com.google.code.findbugs:annotations:3.0.1'
+ 	compile 'com.google.code.findbugs:annotations:3+'
  	
  	//import jacoco library
- 	compile 'org.jacoco:jacoco-maven-plugin:0.7.9'	
+ 	compile 'org.jacoco:jacoco-maven-plugin:0.7.+'	
  	
  	//Import hibernate library
-	compile 'org.hibernate:hibernate-core:5.2.12.Final'
+	compile 'org.hibernate:hibernate-core:5+'
 	//compile group: 'org.hibernate.orm.tooling', name: 'hibernate-enhance-maven-plugin', version: '5+'
 	
 	//Import MySQL connector java driver
-	compile 'mysql:mysql-connector-java:5.1.45'	//compile 'mysql:mysql-connector-java:5.1.44'
+	compile 'mysql:mysql-connector-java:5+'	//compile 'mysql:mysql-connector-java:5.1.44'
 	// Use JUnit test framework
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 //Javadoc tasks settings
-task generateJavadoc(type: Javadoc) {
-   source = sourceSets.main.allJava
-   destinationDir = reporting.file("$rootProject.projectDir/javadocs")
-   classpath = configurations.compile
-   failOnError = false
- }
-tasks.test.dependsOn generateJavadoc
+//task generateJavadoc(type: Javadoc) {
+//   source = sourceSets.main.allJava
+//   destinationDir = reporting.file("$rootProject.projectDir/javadocs")
+//   classpath = configurations.compile
+//   failOnError = false
+//}
+//tasks.test.dependsOn generateJavadoc
  
  
 //findbugs tasks settings
