--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
 - sudo service mysql restart
 - cd ServerGeoUserGradle
 - chmod +x gradlew
-- gradle clean
+- ./gradlew clean
  
 
 
