--- a/ServerGeoUserGradle/build.gradle
+++ b/ServerGeoUserGradle/build.gradle
@@ -59,12 +59,13 @@ dependencies {
 }
 
 //Javadoc tasks settings
-//task generateJavadoc(type: Javadoc) {
-//   source = sourceSets.main.allJava
-//   destinationDir = reporting.file("$rootProject.projectDir/javadocs")
-//   classpath = configurations.compile
-//   failOnError = false
-//}
+task generateJavadoc(type: Javadoc) {
+   source = sourceSets.main.allJava
+   //destinationDir = reporting.file("$rootProject.projectDir/javadocs")
+   classpath = configurations.compile
+   failOnError = false
+}
+tasks.check.dependsOn generateJavadoc
 //tasks.test.dependsOn generateJavadoc
 
 
@@ -106,10 +107,10 @@ test {
 
 task createDB {
      project.exec {
-		//commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
-    	//"--host=localhost", "--port=3306", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
+		commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
+    	"--host=localhost", "--port=3306", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
     	
-    	commandLine 'mysql', "--user=root", "--host=localhost", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
+    	//commandLine 'mysql', "--user=root", "--host=localhost", "--execute=CREATE DATABASE IF NOT EXISTS geouserdb"
     	
 	}    
 }
@@ -117,10 +118,10 @@ task createDB {
 task loadDB {
 	project.exec {
 		standardInput = new FileInputStream(project.file("$rootProject.projectDir/geouserdb.sql"))
-    	//commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
-    	//"--host=localhost", "--port=3306", 'geouserdb'
+    	commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
+    	"--host=localhost", "--port=3306", 'geouserdb'
     	
-    	commandLine 'mysql', "--user=root", "--host=localhost", 'geouserdb'
+    	//commandLine 'mysql', "--user=root", "--host=localhost", 'geouserdb'
 	}   
 }
 
