--- a/ServerGeoUserGradle/build.gradle
+++ b/ServerGeoUserGradle/build.gradle
@@ -59,12 +59,12 @@ dependencies {
 }
 
 //Javadoc tasks settings
-//task generateJavadoc(type: Javadoc) {
-//   source = sourceSets.main.allJava
-//   //destinationDir = reporting.file("$rootProject.projectDir/javadocs")
-//   classpath = configurations.compile
-//   failOnError = false
-//}
+task generateJavadoc(type: Javadoc) {
+   source = sourceSets.main.allJava
+   //destinationDir = reporting.file("$rootProject.projectDir/javadocs")
+   classpath = configurations.compile
+   failOnError = false
+}
 //tasks.check.dependsOn generateJavadoc
 //tasks.test.dependsOn generateJavadoc
 
@@ -117,7 +117,8 @@ task createDB {
 
 task loadDB {
 	project.exec {
-		//standardInput = new FileInputStream(project.file("$rootProject.projectDir/geouserdb.sql"))
+		standardInput = new FileInputStream(project.file("$rootProject.projectDir/geouserdb.sql"))
+    	
     	//commandLine 'C:\\Program Files\\MySQL\\MySQL Server 5.7\\bin\\mysql', "--user=utente", "--password=password",
     	//"--host=localhost", "--port=3306", 'geouserdb'
     	
