Tentativo per avviare il task Javadoc anche su Travis CI #11

--- a/ServerGeoUserGradle/build.gradle
+++ b/ServerGeoUserGradle/build.gradle
@@ -65,7 +65,7 @@ task generateJavadoc(type: Javadoc) {
    classpath = configurations.compile
    failOnError = false
 }
-//tasks.check.dependsOn generateJavadoc
+tasks.check.dependsOn generateJavadoc
 //tasks.test.dependsOn generateJavadoc
 
 
