--- a/ServerGeoUserGradle/build.gradle
+++ b/ServerGeoUserGradle/build.gradle
@@ -58,6 +58,20 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
+//Jar task settings: main class
+jar {
+    archiveName = "ServerGeoUserGradle.jar"
+	from {
+		configurations.runtime.collect {
+			it.isDirectory() ? it : zipTree(it)
+		}
+	}
+	
+	manifest {
+		attributes('Main-Class': 'server.web.frontend.UserRegistryWebApplication','Class-Path': configurations.runtime.collect { it.getName() }.join(''))
+	}
+}
+
 //Javadoc tasks settings
 task generateJavadoc(type: Javadoc) {
    source = sourceSets.main.allJava
@@ -128,15 +142,3 @@ task loadDB {
 
 loadDB.dependsOn createDB
 tasks.test.dependsOn loadDB
-
-//task printJacocoReport {
-//	project.exec {
-//   	workingDir "$rootProject.projectDir/"
-//    	commandLine 'gradlew test jacocoTestReport'
-//	}         
-//}
-
-//printJacocoReport.onlyIf{
-//   tasks.test.didWork
-//}
-
