--- a/ServerGeoUserGradle/build.gradle
+++ b/ServerGeoUserGradle/build.gradle
@@ -24,36 +24,23 @@ repositories {
 }
 
 dependencies {
-	//compile fileTree('libs') {
-    //    include '*.jar'
-    //}
-
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    //api 'org.apache.commons:commons-math3:3.6.1'
-
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    //implementation 'com.google.guava:guava:21.0'
-
-    // Use JUnit test framework
-    //testImplementation 'junit:junit:4.12'
-    
     //Import all necessary external libraries 
     compile 'org.apache.commons:commons-math3:3.6.1','com.google.guava:guava:21.0','org.hamcrest:hamcrest-core:1.3'
- 	compile 'com.google.code.gson:gson:2.8+'	
- 	compile 'org.restlet.jee:org.restlet:2.3+'
+ 	compile 'com.google.code.gson:gson:2.8+' //2.8.2
+ 	compile 'org.restlet.jee:org.restlet:2.3+' //2.3.12
  	
  	//Import findbugs library
- 	compile 'com.google.code.findbugs:annotations:3+'
+ 	compile 'com.google.code.findbugs:annotations:3+' //3.0.1
  	
  	//import jacoco library
- 	compile 'org.jacoco:jacoco-maven-plugin:0.7.+'	
+ 	compile 'org.jacoco:jacoco-maven-plugin:0.7.+'	//0.7.9
  	
  	//Import hibernate library
-	compile 'org.hibernate:hibernate-core:5+'
-	//compile group: 'org.hibernate.orm.tooling', name: 'hibernate-enhance-maven-plugin', version: '5+'
+	//compile 'org.hibernate:hibernate-core:5.+' //5.2.12.Final
 	
 	//Import MySQL connector java driver
-	compile 'mysql:mysql-connector-java:5+'	//compile 'mysql:mysql-connector-java:5.1.44'
+	compile 'mysql:mysql-connector-java:5.+'	//5.1.44
+	
 	// Use JUnit test framework
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
